--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   <section id="resume" class="py-12 text-center" data-aos="fade-up">
     <div class="container mx-auto px-4">
       <h2 class="text-3xl font-bold mb-6">Resume</h2>
-      <a href="./images/Theertha U K_Resume.pdf" class="bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded transition duration-300 inline-block">
+      <a href="./images/TheerthaUK_Resume.pdf" class="bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded transition duration-300 inline-block">
         Download Resume
       </a>
     </div>
